stylesheets/default.sass
---
---

// Variables

$fill1: #111
$fill2: #222
$link1: #EBFFB4
$link2: #C6E567
$text1: #FFF
$text2: darken($text1, 30%)

// Mixins

= respond-to($media)
  @if $media == mobile-portrait
    @media only screen and (max-width: 480px)
      @content

= reset
  margin: 0
  padding: 0
  border: none

= reset-list
  +reset
  list-style-type: none

= clearfix
  &:after
    content: "."
    display: block
    height: 0
    clear: both
    visibility: hidden

= serif
  font-family: 'Georgia', 'Times New Roman', serif

= sans-serif
  font-family: 'Helvetica Neue', 'Helvetica', sans-serif

= monospace
  font-family: monospace

= ease-in-out
  -webkit-transition: all 350ms ease-in-out
  -moz-transition: all 350ms ease-in-out
  -o-transition: all 350ms ease-in-out
  transition: all 350ms ease-in-out

= format
  line-height: 1.8em

= link
  a
    border-bottom: 1px solid $link1
    color: $link1
    text-decoration: none

    &:hover, &:focus
      +ease-in-out
      border-bottom-color: $fill1
      color: $fill1
      background: $link1

// Layout

html
  +reset
  background: $fill2
  color: $text1
  +serif

body
  +reset
  position: relative
  width: 44em
  max-width: 90%
  margin: 2em auto
  font-size: 1.1em
  +respond-to(mobile-portrait)
    font-size: 1em

h1
  +reset
  min-height: 202px
  background:
    image: url(/images/lime.png)
    position: right top
    repeat: no-repeat
  font:
    size: 5.5em
    weight: normal
  +respond-to(mobile-portrait)
    background: none
    font:
      size: 3.75em
    text-align: center
    margin-top: -0.475em
    min-height: 0

  &:hover
    background-position: right bottom

  a
    color: $text1
    text-decoration: none

    &:hover
      color: $link1

      span:after
        color: $link1

    span
      font-size: 0.01em
      color: $fill2

      &:after
        content: 'dot'
        position: relative
        bottom: 0.5em
        padding-left: 0.25em
        padding-right: 0.5em
        font-size: 25em
        color: $text1

nav > ul
  +reset-list
  position: absolute
  top: 7.63em
  left: 0
  width: 28em
  background: $fill1
  text-align: center
  +respond-to(mobile-portrait)
    position: static
    margin-top: 1em
    width: auto

  li
    +reset
    display: inline-block

    a
      +reset
      +ease-in-out
      display: inline-block
      padding: 0.75em
      font-size: 1.5em
      letter-spacing: 0.1em
      text:
        transform: uppercase
        decoration: none
      color: $text1
      +respond-to(mobile-portrait)
        padding: 0.5em
        font-size: 1.1em

footer > p
  +sans-serif
  color: $text2

  a
    color: $text1
    border-color: $text1

    &:hover
      background: $text1

article

  time
    display: block
    margin:
      top: 2.5em
      bottom: 0.25em
    font-weight: bold
    text-transform: uppercase
    color: $text2
    +sans-serif
    +respond-to(mobile-portrait)
      margin:
        top: 1.3em

  h2
    margin-top: 0

// Common

h2, h3
  color: $link2
  +sans-serif
  +link

  a
    color: $link2
    border-bottom-color: $fill2

h2
  font-size: 2em
  +respond-to(mobile-portrait)
    font-size: 1.5em

h3
  font-size: 1.5em
  +respond-to(mobile-portrait)
    font-size: 1.25em

  span
    display: block
    font:
      weight: normal
      size: 0.7em
    color: $text2

h4
  +sans-serif

  & + p
    padding: 1em
    background: $fill1

img
  display: block
  margin: 0 auto
  +respond-to(mobile-portrait)
    max-width: 285px

p
  +format
  +link
  margin-bottom: 1.25em

ol, ul
  +format
  +link

  li
    margin-bottom: 0.625em

    &:last-child
      margin-bottom: 0

hr
  margin: 1.5em 0
  border:
    top:
      color: $fill1
      style: solid
      width: 1px
    bottom:
      color: lighten($fill1, 20%)
      style: solid
      width: 1px
    left: none
    right: none

table
  width: 100%
  border-collapse: collapse

  thead
    border-bottom: 1px solid $text1

    tr th
      text-align: left
      +sans-serif

  th, td
    padding: 0.25em 0.5em

blockquote
  padding-left: 1em
  border-left: 1px solid $text2
  color: $text2
  font-style: italic
  +sans-serif

code
  +monospace

pre
  padding: 1em
  overflow: auto
  background: #111

// Uncommon

img#left
  float: left
  margin:
    right: 1.5em
    bottom: 1em

ul#images
  +reset-list
  +clearfix
  padding-top: 0.5em

  li
    float: left
    margin:
      right: 1.5em
      bottom: 1.5em

ol#archive
  +reset-list

  li
    +clearfix
    margin-bottom: 0.3125em

    time
      float: left
      display: block
      width: 4.5em

    p
      +reset
      margin-left: 5em

div#paginator
  position: relative
  +link
  +clearfix
  +respond-to(mobile-portrait)
    height: 3.5em

  a
    position: absolute
    top: 0
    +respond-to(mobile-portrait)
      top: auto
      bottom: 0

    &#left
      left: 0

    &#right
      right: 0

  fieldset
    +reset
    display: inline
    width: 100%
    text-align: center

    input[type=search]
      +respond-to(mobile-portrait)
        width: 225px

